# docALR

./: README.md  app.py  pyproject.toml  requirements.txt  summarization.py
pdfsummarizer/: setup.py  summarizer.py
pdfsummarizer/pdfsummarizer/: cli.py
