[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfsummarizer"
version = "0.1.0"
description = "Summarize PDF papers using HuggingFace models"
authors = [
    { name = "Shabnam Barbhuiya", email = "shabnambarbhuiya0S@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "transformers[sentencepiece]",
    "pymupdf",
    "nltk",
    "pandas"
]

[project.scripts]
pdfsummarizer = "pdfsummarizer.cli:main"
